[package]
name = "ecto_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ecto_macros = { version = "0.1.0", path = "../macros" }

logos = "0.15.0"
strum = { version = "0.26.3", features = ["derive"] }
itertools = "0.14.0"
typed-arena = "2.0.2"
bytemuck = { version = "1.23.1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
